Fixed title alignment.

--- a/frontend/infosafe_frontend/src/styling/Help.css
+++ b/frontend/infosafe_frontend/src/styling/Help.css
@@ -19,6 +19,7 @@
 .helpTitle{
     font-size: 45px;
     color: black;
+    text-align: center;
 }
 .helpSubTitle{
     font-size: 26px;
